--- a/Major Project.ipynb
+++ b/Major Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4e19af9d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3e065b76",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "54210945",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "4        4.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9a119032",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3e2c6215",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "81b46060",
    "metadata": {},
    "outputs": [
@@ -399,14 +399,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "id": "6b0263d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "975ed785422d47e1a5d295a31bf77096",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.87\n",
+      "\n",
+      "Partition = 1 \n",
+      "==================\n",
+      "Final Weight 0.85\n",
+      "\n",
+      "Score: 0.483271375464684\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f109085bea04db990163bf391b2e170",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Partition = 1 \n",
+      "==================\n",
+      "Final Weight 0.64\n",
+      "\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.88\n",
+      "\n",
+      "Score: 0.48079306071871125\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c274ea732426484f9fd40fe840020fd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Partition = 1 \n",
+      "==================\n",
+      "Final Weight 0.47000000000000003\n",
+      "\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.89\n",
+      "\n",
+      "Score: 0.48203221809169766\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c88f182c7c294ca7a51d8f379b125580",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Partition = 1 \n",
+      "==================\n",
+      "Final Weight 0.99\n",
+      "\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.96\n",
+      "\n",
+      "Score: 0.4556726596404216\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da2d143ae7e243b095fd0d384f3963ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Partition = 1 \n",
+      "==================\n",
+      "Final Weight 0.81\n",
+      "\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.88\n",
+      "\n",
+      "Score: 0.46745195288282704\n",
+      "\n",
+      "Average Score: 0.47384425335966823\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the 1st CV strategy\n",
+    "outer_kfold = KFold(n_splits=5, random_state=27, shuffle=True)\n",
+    "final_scores = list()\n",
+    "\n",
+    "# Generate the folds\n",
+    "for train, test in outer_kfold.split(df_train_dum):\n",
+    "    x_train, x_test = df_train_dum.iloc[train].values, df_train_dum.iloc[test].values\n",
+    "    y_train, y_test = Y[train], Y[test]\n",
+    "    \n",
+    "    # Fit a decision tree classifier\n",
+    "    # The point of this classifier is not to get best results but only to partition and map the data\n",
+    "    # So the only hyper-parameter you should touch is max_leaf_nodes\n",
+    "    # max_leaf_nodes not only defines the maximum leaf nodes in the decision tree but also the maximum partitions in the dataset\n",
+    "    dec_tree = DecisionTreeClassifier(random_state=27, max_leaf_nodes=2)\n",
+    "    dec_tree.fit(x_train, y_train)\n",
+    "    # Now we know which training sample belongs to which partition\n",
+    "    sample_indices = np.array(dec_tree.apply(x_train))\n",
+    "    \n",
+    "    # We now need to find the best weights for lightgbm and xgboost in every partition\n",
+    "    # We will do this by using a KFold CV strategy\n",
+    "    \n",
+    "    # This dictionary will hold the weight corresponding to each partition\n",
+    "    dynamic_weights = dict()\n",
+    "    # For every single partition in the sample space, perform the following steps\n",
+    "    for index in tqdm(list(Counter(sample_indices))):\n",
+    "        indices = np.where(sample_indices==index)[0]\n",
+    "        x, y = x_train[indices], y_train[indices]\n",
+    "        print(\"\\nPartition =\", index, \"\\n==================\")\n",
+    "        \n",
+    "        # This variable consists of real numbers between 0 and 1 with a constant difference of 0.01\n",
+    "        # These values correspond to weights within the average\n",
+    "        weights = np.arange(0, 1, 0.01)\n",
+    "        # This variable will be used to find the weight corresponding to the best score\n",
+    "        scores_corr_wts = np.zeros(len(weights))\n",
+    "\n",
+    "        # Perform CV to get the best weights for current partition\n",
+    "        kfold = KFold(n_splits=5, random_state=27, shuffle=True)\n",
+    "        for inner_train, inner_test in kfold.split(x):\n",
+    "            xx_train, xx_test = x[inner_train], x[inner_test]\n",
+    "            yy_train, yy_test = y[inner_train], y[inner_test]\n",
+    "\n",
+    "            model = LogisticRegression()\n",
+    "            model.fit(xx_train, yy_train)\n",
+    "            preds1 = model.predict_proba(xx_test)\n",
+    "\n",
+    "            model = KNeighborsClassifier()\n",
+    "            model.fit(xx_train, yy_train)\n",
+    "            preds2 = model.predict_proba(xx_test)\n",
+    "            \n",
+    "            # Each weight is evaluated by calculating the corresponding score\n",
+    "            for i in range(len(weights)):\n",
+    "                final_inner_preds = np.argmax(preds1*weights[i] + preds2*(1-weights[i]), axis=1)\n",
+    "                scores_corr_wts[i]+= accuracy_score(yy_test, final_inner_preds)\n",
+    "                \n",
+    "        # The best weight is the one with the highest CV score\n",
+    "        final_weight = weights[np.argmax(scores_corr_wts)]\n",
+    "        print(\"Final Weight\", final_weight)\n",
+    "        # This weight is assigned to the current partition\n",
+    "        dynamic_weights[index] = final_weight\n",
+    "    \n",
+    "    # Once all partitions have been assigned weights, continue to create your best individual models\n",
+    "    model1 = LogisticRegression()\n",
+    "    model1.fit(x_train, y_train)\n",
+    "\n",
+    "    model2 = KNeighborsClassifier()\n",
+    "    model2.fit(x_train, y_train)\n",
+    "    \n",
+    "    # Use the \"apply\" function offered by sklearn, again, to find out the partition id for each test sample\n",
+    "    test_map = np.array(dec_tree.apply(x_test))\n",
+    "    # This variable will contain all our predictions\n",
+    "    final_preds = np.zeros(len(x_test))\n",
+    "    for index in list(Counter(test_map)):\n",
+    "        # Take all test samples that belong to current partition\n",
+    "        indices = np.where(test_map == index)[0]\n",
+    "        xx_test = x_test[indices]\n",
+    "        # Get the weights corresponding to the current partition\n",
+    "        model_weights = dynamic_weights[index]\n",
+    "        # Blend the predictions using the correct dynamic weights\n",
+    "        out = model1.predict_proba(xx_test)*dynamic_weights[index] + model2.predict_proba(xx_test)*(1-dynamic_weights[index])\n",
+    "        # Save the prediction at the correct indices\n",
+    "        final_preds[indices] = np.argmax(out, axis=1)\n",
+    "    \n",
+    "    final_scores.append(accuracy_score(y_test, final_preds))\n",
+    "    print(\"\\nScore:\", final_scores[-1])\n",
+    "print(\"\\nAverage Score:\", np.average(final_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "66017177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f492464ae57b4b5ea44ebc8f69f22b23",
+       "model_id": "04b6f0d5ec1644f0aeac74475faf4cc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,19 +671,19 @@
       "\n",
       "Partition = 2 \n",
       "==================\n",
-      "Final Weight 0.88\n",
+      "Final Weight 0.98\n",
       "\n",
       "Partition = 1 \n",
       "==================\n",
-      "Final Weight 0.35000000000000003\n",
+      "Final Weight 0.66\n",
       "\n",
-      "Score: 0.4826517967781908\n"
+      "Score: 0.4795539033457249\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a29178d7b604554b452a2e9966b8f98",
+       "model_id": "10fb790e51cc49849c5f13ffdbd68ff3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,19 +701,19 @@
       "\n",
       "Partition = 1 \n",
       "==================\n",
-      "Final Weight 0.34\n",
+      "Final Weight 0.55\n",
       "\n",
       "Partition = 2 \n",
       "==================\n",
-      "Final Weight 0.9\n",
+      "Final Weight 0.92\n",
       "\n",
-      "Score: 0.4739776951672863\n"
+      "Score: 0.4745972738537794\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3b7fb5f01f94ffba3b8ef0ff36bf35a",
+       "model_id": "ffb72edae918476da32858b6500870d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -484,19 +731,19 @@
       "\n",
       "Partition = 1 \n",
       "==================\n",
-      "Final Weight 0.34\n",
+      "Final Weight 0.61\n",
       "\n",
       "Partition = 2 \n",
       "==================\n",
-      "Final Weight 0.62\n",
+      "Final Weight 0.74\n",
       "\n",
-      "Score: 0.46592317224287483\n"
+      "Score: 0.48451053283767037\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bf52839ac6b43c082393fc33495af4d",
+       "model_id": "e90bf6134b8d4944bb918ef0294753a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -514,19 +761,19 @@
       "\n",
       "Partition = 1 \n",
       "==================\n",
-      "Final Weight 0.77\n",
+      "Final Weight 0.6\n",
       "\n",
       "Partition = 2 \n",
       "==================\n",
-      "Final Weight 0.71\n",
+      "Final Weight 0.86\n",
       "\n",
-      "Score: 0.4649721016738996\n"
+      "Score: 0.47117172969621823\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a332c4177d7e46e7afd03e010f3e1729",
+       "model_id": "9cc1b03f70a34d51a17bf633683e7eb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,16 +790,16 @@
      "text": [
       "\n",
       "Partition = 1 \n",
-      "==================\n",
-      "Final Weight 0.48\n",
-      "\n",
-      "Partition = 2 \n",
       "==================\n",
       "Final Weight 0.65\n",
       "\n",
-      "Score: 0.46869187848729077\n",
+      "Partition = 2 \n",
+      "==================\n",
+      "Final Weight 0.8200000000000001\n",
       "\n",
-      "Average Score: 0.4712433288699084\n"
+      "Score: 0.47427154370737756\n",
+      "\n",
+      "Average Score: 0.47682099668815414\n"
      ]
     }
    ],
@@ -560,6 +807,7 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "outer_kfold = KFold(n_splits=5, random_state=27, shuffle=True)\n",
     "final_scores = list()\n",
@@ -608,7 +856,7 @@
     "            preds1=model.predict_proba(xx_test)\n",
     "\n",
     "            base_model = [ (('lr',LogisticRegression())) ,('knn',KNeighborsClassifier(n_neighbors=5,metric='minkowski' ,p=2 ))]\n",
-    "            meta_model=LogisticRegression()\n",
+    "            meta_model=SVC(probability=True)\n",
     "            stacking_model = StackingClassifier(estimators=base_model,final_estimator=meta_model, passthrough=True)\n",
     "            stacking_model.fit(xx_train,yy_train)\n",
     "            preds2=stacking_model.predict_proba(xx_test)\n",
@@ -655,6 +903,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62ed7cfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8613851",
    "metadata": {},
    "outputs": [],
    "source": []
